exercise/exercise-manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: exercises
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 8798
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: exercises
spec:
  parentRefs:
  - name: my-gateway
    namespace: exercises
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: ping-pong-svc
      port: 3567
  - matches:
    - path:
        type: PathPrefix
        value: /log
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: log-output-svc
      port: 1234
